--- a/video-share-socketio/app/index.html
+++ b/video-share-socketio/app/index.html
@@ -3,17 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Share your videos</title>
-	<script type="text/javascript" src='/socket.io/socket.io.js'></script>
-	<script type="text/javascript" src='main.js'> </script>
-	<script type="text/javascript" src='bower_components/moment/min/moment.min.js'></script>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+	<script type="text/javascript" src='/socket.io/socket.io.js'></script>
+	<script type="text/javascript" src='bower_components/moment/min/moment.min.js'></script>
+	<script type="text/javascript" src='main.js'> </script>
 </head>
 <body>
 	<h1>  GoT Resting Room </h1>
 	<div id="messages"></div>
 	<form onsubmit="return addMessage(this)">
-
       <div class="username">
           <input type="text" id='username' placeholder="Your name" value=Guest required>
       </div>
@@ -24,6 +23,8 @@
         <textarea type="text" id="message" placeholder="Enter a message" value="" required></textarea>
       </div>
       <input class='sendMessageButton' type="submit" name="name" value="Send!">
-</form>	
+</form>
+
+
 </body>
 </html>
